# GenerationOfChessVariants

./: .gitignore  CMakeLists.txt  DEVSmodelsForm.doc  DEVSmodelsForm.docx  GenerationOfChessVariants_CellDEVS_Report.docx  README.md  build_sim.sh
config/: bishopNeighborhood_8x8.json  bishopNeighborhood_9x13.json  chessVariantKernel1.json  chessVariantKernel1SmallGrid.json  chessVariantKernel1_glider.json  chessVariantKernel1_large.json  chessVariantKernel1_line.json  chessVariantKernel1_noWrap.json  chessVariantKernel2.json  chessVariantKernel2SmallGrid.json  knightNeighborhood_8x8.json  knightNeighborhood_9x13.json  multiPiece_8x8.json  rookNeighborhood_8x8.json
main/: CMakeLists.txt  main.cpp
main/include/: chessVariantCell.hpp  chessVariantState.hpp
scripts/: run_all_scenarios.sh  run_kernel1.sh  run_kernel1_small.sh  run_kernel2.sh  run_kernel2_small.sh
simulation_videos/: bishopNeighborhood_8x8.webm  bishopNeighborhood_9x13.webm  chessVariantKernel1.webm  chessVariantKernel1_glider.webm  chessVariantKernel1_large.webm  chessVariantKernel1_noWrap.webm  chessVariantKernel1_smallGrid.webm  chessVariantKernel2.webm  chessVariantKernel2_smallGrid.webm  chessVariantKerner1_line.webm  knightNeighborhood_8x8.webm  knightNeighborhood_9x13.webm  multiPiece_8x8.webm  rookNeighborhood_8x8.webm
videos/: chessVariantKernel1.webm  chessVariantKernel1SmallGrid.webm  chessVariantKernel2.webm  chessVariantKernel2SmallGrid.webm
